[gd_scene load_steps=9 format=2]

[ext_resource path="res://body/body.gd" type="Script" id=2]
[ext_resource path="res://body/body.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22, 24 )

[sub_resource type="Animation" id=4]
resource_name = "falling"

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true

[sub_resource type="Animation" id=6]
resource_name = "moving"

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="BodySprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 7 )
shape = SubResource( 1 )

[node name="ReattachmentArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReattachmentArea"]
position = Vector2( -1, 7 )
shape = SubResource( 2 )

[node name="AttachmentPoint" type="Position2D" parent="."]
visible = false
position = Vector2( 0, 4 )

[node name="InteractArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/falling = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/moving = SubResource( 6 )
[connection signal="area_entered" from="InteractArea" to="." method="_on_InteractArea_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_InteractArea_area_exited"]
